--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -279,12 +279,12 @@
 
                                 <div class="form-group">
                                     <label for="CenterId">yes, specify</label>
-                                    <input [formControl]="SoughtHelpDesc" class="form-control" />
+                                    <input [formControl]="clientAndHouseholdForm.controls['SoughtHelpDesc']" class="form-control" />
                                 </div>
 
                                 <div class="form-group">
                                     <label for="CenterId">If yes, what was the outcome of that help?</label>
-                                    <input [formControl]="SoughtHelpOutPut" class="form-control" />
+                                    <input [formControl]="clientAndHouseholdForm.controls['SoughtHelpOutPut']" class="form-control" />
                                 </div>
 
                                 <div class="form-group">
@@ -298,7 +298,7 @@
 
                                 <div class="form-group">
                                     <label for="CenterId">If other, please specify</label>
-                                    <input [formControl]="PeacemakerAssistanceDesc" class="form-control" />
+                                    <input [formControl]="clientAndHouseholdForm.controls['PeacemakerAssistanceDesc']" class="form-control" />
                                 </div>
 
                             </div>
@@ -332,7 +332,7 @@
 
                                 <div class="form-group">
                                     <label for="PeaceMakerId">Client's Email</label>
-                                    <input [formControl]="ClientEmailId" inputmode="email" class="form-control" />
+                                    <input [formControl]="clientAndHouseholdForm.controls['ClientEmailId']" inputmode="email" class="form-control" />
                                 </div>
 
                                 <div class="form-group">
@@ -373,7 +373,7 @@
 
                                 <div class="form-group">
                                     <label for="PeaceMakerId">If self-employed or employed, please specify:</label>
-                                    <input [formControl]="OccupationDesc" class="form-control" />
+                                    <input [formControl]="clientAndHouseholdForm.controls['OccupationDesc']" class="form-control" />
                                 </div>
 
                             </div>
@@ -407,12 +407,12 @@
 
                                 <div class="form-group">
                                     <label for="PeaceMakerId">Year of marriage</label>
-                                    <input [formControl]="YearOfMarriage" inputmode="numeric" maxlength="4" class="form-control" />
+                                    <input [formControl]="clientAndHouseholdForm.controls['YearOfMarriage']" inputmode="numeric" maxlength="4" class="form-control" />
                                 </div>
 
                                 <div class="form-group">
                                     <label for="PeaceMakerId">At what age did client have her first child?</label>
-                                    <input [formControl]="ClientAgeAtFirstChild" inputmode="numeric" maxlength="2" class="form-control" />
+                                    <input [formControl]="clientAndHouseholdForm.controls['ClientAgeAtFirstChild']" inputmode="numeric" maxlength="2" class="form-control" />
                                 </div>
 
                                 <div class="form-group">
@@ -422,9 +422,39 @@
                         </div>
                     </div>
 
-
                 </div>
             </form>
+        </tab>
+
+        <tab title="Spouse" style="width:100%" *ngIf="spouseForm">
+            <form [formGroup]="spouseForm" *ngIf="isSpouseDataLoaded">
+                <div class="row">
+                </div>
+            </form>
+        </tab>
+
+        <tab title="Physical Health" style="width:100%" *ngIf="spouseForm">
+        </tab>
+
+        <tab title="Offender" style="width:100%" *ngIf="spouseForm">
+        </tab>
+
+        <tab title="Abuse" style="width:100%" *ngIf="spouseForm">
+        </tab>
+
+        <tab title="Sessions" style="width:100%" *ngIf="spouseForm">
+        </tab>
+
+        <tab title="Mental Status" style="width:100%" *ngIf="spouseForm">
+        </tab>
+
+        <tab title="Feedback" style="width:100%" *ngIf="spouseForm">
+        </tab>
+
+        <tab title="Legal" style="width:100%" *ngIf="spouseForm">
+        </tab>
+
+        <tab title="Case" style="width:100%" *ngIf="spouseForm">
         </tab>
 
     </tabset>
