session bug fix

--- a/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
+++ b/Web/WhitePage.MyWeb.UI/src/app/cases/cases.detailed.html
@@ -1774,7 +1774,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form [formGroup]="caseOffenderForm" *ngIf="caseSessionForm">
+                <form [formGroup]="caseSessionForm" *ngIf="caseSessionForm">
                     <div class="row">
                         <div class="col-md-12 d-flex flex-column">
                             <div class="card flex-fill">
